GIF, Fixed Dimension, added more controls

--- a/335-p1-DN/cella_ant_12.html
+++ b/335-p1-DN/cella_ant_12.html
@@ -16,10 +16,10 @@
 
 <body>
   <h1>Cella Ant 12 is running.</h1>
-  <h4>Time-stamp: <2019-09-13 16:38:03 David Nguyen>
+  <!-- <h4>Time-stamp: <2019-09-13 16:38:03 David Nguyen> -->
   </h4>
 
-  <canvas id="grid" width="820" height="620"></canvas>
+  <canvas id="grid" width="820" height="820"></canvas>
   <div id="controller">
     <label for="rates">Playback speed: </label>
     <select name="rates" id="rates">
@@ -39,7 +39,7 @@
       <option value="2000">0.5x</option>
       <option value="4000">0.25x</option>
     </select>
-
+    <div id="counter">0</div>
     <button class="play-btn">play</button>
     <button class="step-btn">step</button>
     <button class="pause-btn">pause</button>
